Feat: Sistema adaptado para compilar con GraalVM y Spring Boot Native - Se cambio Spring Data e Hibernate debido a dependencia incompatible (ByteBuddy: Genera clases dinamicamente) - Se adapto el modelo y repositorio para ser compatible con el tipo de valor jsonb (Usando conversores) - Se listaron todas las clases que usan reflexion, proxies o lectura para que se compilen