@@ -5,7 +5,6 @@ import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.beans.factory.annotation.Value;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Configuration
 public class FileUploadConfig implements WebMvcConfigurer {
@@ -15,7 +14,7 @@ public class FileUploadConfig implements WebMvcConfigurer {
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        Path uploadPath = Paths.get(System.getProperty("user.dir"), uploadDir)
+        Path uploadPath = Path.of(System.getProperty("user.dir"), uploadDir)
                 .toAbsolutePath()
                 .normalize();
 
